<resources>
    <string name="app_name">Hello World Kotlin</string>
    <string name="login_title">Faça seu Login</string>
    <string name="login_title_acs">Título Faça seu Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_title">Faça seu Registro</string>

    <string name="movies_fragment_text">Movies fragment</string>
    <string name="movie_detail_text">Movie detail</string>

</resources>